; ModuleID = '/home/carl/AnghaBench/esp-idf/examples/peripherals/mcpwm/mcpwm_brushed_dc_control/main/extr_mcpwm_brushed_dc_control_example.c_brushed_motor_backward.c'
source_filename = "/home/carl/AnghaBench/esp-idf/examples/peripherals/mcpwm/mcpwm_brushed_dc_control/main/extr_mcpwm_brushed_dc_control_example.c_brushed_motor_backward.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MCPWM_OPR_A = common dso_local global i32 0, align 4
@MCPWM_OPR_B = common dso_local global i32 0, align 4
@MCPWM_DUTY_MODE_0 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32, float)* @brushed_motor_backward to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @brushed_motor_backward(i32 %0, i32 %1, float %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca float, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store float %2, float* %6, align 4
  %7 = load i32, i32* %4, align 4
  %8 = load i32, i32* %5, align 4
  %9 = load i32, i32* @MCPWM_OPR_A, align 4
  %10 = call i32 @mcpwm_set_signal_low(i32 %7, i32 %8, i32 %9)
  %11 = load i32, i32* %4, align 4
  %12 = load i32, i32* %5, align 4
  %13 = load i32, i32* @MCPWM_OPR_B, align 4
  %14 = load float, float* %6, align 4
  %15 = call i32 @mcpwm_set_duty(i32 %11, i32 %12, i32 %13, float %14)
  %16 = load i32, i32* %4, align 4
  %17 = load i32, i32* %5, align 4
  %18 = load i32, i32* @MCPWM_OPR_B, align 4
  %19 = load i32, i32* @MCPWM_DUTY_MODE_0, align 4
  %20 = call i32 @mcpwm_set_duty_type(i32 %16, i32 %17, i32 %18, i32 %19)
  ret void
}

declare dso_local i32 @mcpwm_set_signal_low(i32, i32, i32) #1

declare dso_local i32 @mcpwm_set_duty(i32, i32, i32, float) #1

declare dso_local i32 @mcpwm_set_duty_type(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
